--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Bitte Passwort eingeben</h1>
   <form id="loginForm">
     <input type="password" id="password" placeholder="Passwort">
+      <link rel="manifest" href="/app/manifest.json">
     <button type="submit">Login</button>
   </form>
 
@@ -33,3 +34,4 @@
   </script>
 </body>
 </html>
+
